--- a/DataTypes.ipynb
+++ b/DataTypes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDMlBfuovrZEAXeh6vY335"
+      "authorship_tag": "ABX9TyO4kpyEKh0kd/Nn9UGNq0se"
     },
     "kernelspec": {
       "name": "python3",
@@ -1110,6 +1110,634 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Tuples**\n",
+        "\n",
+        "A tuple is similar to a list. It's also an ordered collection of items. However, there is an important difference between the two.\n",
+        "\n",
+        "Lists are mutable; meaning we can add, change and delete items of a list. However, tuples are immutable; once a tuple is created, we cannot change its items.\n",
+        "\n",
+        "All other operations such as accessing individual items and iterating a tuple are the same."
+      ],
+      "metadata": {
+        "id": "-B3b2StDkq-1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Creating Tuples\n"
+      ],
+      "metadata": {
+        "id": "ghJ2QdqPk4gg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# a tuple of numbers\n",
+        "numbers1 = (10, 20, 30)\n",
+        "print(numbers1)   # (10, 20, 30)\n",
+        "\n",
+        "# empty tuple\n",
+        "numbers2 = ()\n",
+        "print(numbers2)\n",
+        "\n",
+        "# tuple of mixed data types\n",
+        "mixed_tuple = (1, 'Hello', [3, 4])\n",
+        "print(mixed_tuple)  # (1, 'Hello', [3, 4])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WWO83JPjk_NK",
+        "outputId": "607458a2-d7c6-4b35-d70a-60317e6f7f5a"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(10, 20, 30)\n",
+            "()\n",
+            "(1, 'Hello', [3, 4])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Creating a Tuple With Only One Item\n"
+      ],
+      "metadata": {
+        "id": "FT3BuBZOlDp4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = ('Hello')\n",
+        "print(text)   # Hello"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A7AkP7hSlGbF",
+        "outputId": "0f9400ba-6e0b-425f-826e-778fa49bca41"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To create a tuple with one item, we also need to put a trailing comma to indicate that it is, in fact, a tuple."
+      ],
+      "metadata": {
+        "id": "NCPK9EUglMLL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tuple1 = ('Hello',)\n",
+        "print(tuple1)   # ('Hello',)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bZu5LVErlOyF",
+        "outputId": "9cd3b719-bf73-46b7-a95c-bb2de6793717"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Hello',)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tuple Length\n"
+      ],
+      "metadata": {
+        "id": "5aFqsKJ8lSEt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tuple containing 3 items\n",
+        "languages = ('Python', 'JavaScript', 'C++')\n",
+        "\n",
+        "length = len(languages)\n",
+        "print(length)    # Output: 3\n",
+        "\n",
+        "# empty tuple\n",
+        "animals = ()\n",
+        "\n",
+        "length = len(animals)\n",
+        "print(length)   # Output: 0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m_B6e185lVZO",
+        "outputId": "f1dc35a2-5e6d-4cd8-be3d-234295852eef"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Access Tuple Items\n"
+      ],
+      "metadata": {
+        "id": "nIIbToMzle0x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "languages = ('Python', 'JavaScript', 'C++')\n",
+        "\n",
+        "# access first item\n",
+        "first_language = languages[0]\n",
+        "print(first_language)   # Python\n",
+        "\n",
+        "# access second item\n",
+        "print(languages[1])   # JavaScript\n",
+        "\n",
+        "# access third-last item\n",
+        "print(languages[-3])   # Python"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nDaPrY1klmeJ",
+        "outputId": "6198a3da-04fb-423b-d173-0375fcd0d393"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python\n",
+            "JavaScript\n",
+            "Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Problem Description\n",
+        "\n",
+        "Write a program to access and print an item from a tuple.\n",
+        "\n",
+        "Create a tuple containing four items: 9, 11, 15, and 17 and assign them to the odd_numbers variable.\n",
+        "Print the third item of the tuple (using a positive index)."
+      ],
+      "metadata": {
+        "id": "dAn87JVoly01"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create a tuple containing items 9, 11, 15 and 17\n",
+        "# assign the tuple to the odd_numbers variable\n",
+        "odd_numbers =(9,11,15,17)\n",
+        "# print the third item\n",
+        "print(odd_numbers[2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gX4FddVNl3q2",
+        "outputId": "4b9658c4-a09d-4c88-e8bf-c337d2251dbc"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Slicing of a Tuple\n"
+      ],
+      "metadata": {
+        "id": "YLO2kGAol9Ez"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = (10, 20, 30, 40, 50, 60)\n",
+        "print(numbers[1: 4])    # (20, 30, 40)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n3Dfv8czmANr",
+        "outputId": "bb6c375b-b3e5-47b6-b39c-e5fa5a3d90fa"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(20, 30, 40)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Slicing doesn't modify the original tuple; it's not possible. Instead, get a new tuple."
+      ],
+      "metadata": {
+        "id": "ym8T6-HmmDMD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = (10, 20, 30, 40, 50, 60)\n",
+        "\n",
+        "# items from index 0 to 3\n",
+        "print(numbers[0: 4])    # (10, 20, 30, 40)\n",
+        "\n",
+        "# items from index 3 to 4\n",
+        "print(numbers[3: 5])   # (40, 50)\n",
+        "\n",
+        "# items from index 3 to second-last\n",
+        "# remember, last index is exclusive\n",
+        "print(numbers[3: -1])   # (40, 50)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ds2D3-WMmHOb",
+        "outputId": "5834027b-a4cb-434c-ec16-5f82351f50e6"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(10, 20, 30, 40)\n",
+            "(40, 50)\n",
+            "(40, 50)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Omit Start and End Index\n"
+      ],
+      "metadata": {
+        "id": "DVVIvtdqmJ1-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = (10, 20, 30, 40, 50, 60)\n",
+        "\n",
+        "# items from first index to 3\n",
+        "print(numbers[: 4])    # (10, 20, 30, 40)\n",
+        "\n",
+        "# items from index 3 to last\n",
+        "print(numbers[3: ])   # (40, 50, 60)\n",
+        "\n",
+        "# omitting both start and end index\n",
+        "# items from first to last\n",
+        "print(numbers[:])   # (10, 20, 30, 40, 50, 60)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ByTLN5i1mNwG",
+        "outputId": "d27128a1-7f01-4afd-fa43-1acf823160b3"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(10, 20, 30, 40)\n",
+            "(40, 50, 60)\n",
+            "(10, 20, 30, 40, 50, 60)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Change Items of a Tuple\n",
+        "## Note that we cannot change items of a tuple.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Bc2n8pFZmXay"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "languages = ('Python', 'JavaScript', 'C++')\n",
+        "\n",
+        "# try to change the second item to 'Java'\n",
+        "languages[1] = 'Java'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        },
+        "id": "-IKCy683mdvT",
+        "outputId": "b6014f12-2835-423b-834c-90aea349aeab"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'tuple' object does not support item assignment",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-baddd0e5feba>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# try to change the second item to 'Java'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mlanguages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Java'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "languages = ('Python', 'JavaScript', 'C++')\n",
+        "\n",
+        "# assign new tuple to languages\n",
+        "languages = ('Python', 'JavaScript')\n",
+        "\n",
+        "print(languages)   # ('Python', 'JavaScript')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yYzxrfmzmmaq",
+        "outputId": "64204aa2-5635-4609-ce43-a435904ff5e8"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Python', 'JavaScript')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Delete Tuple\n",
+        "## we cannot delete individual items of a tuple."
+      ],
+      "metadata": {
+        "id": "i3A2xMTumqDe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "animals = ('dog', 'cat', 'rat')\n",
+        "\n",
+        "# try to delete the second item\n",
+        "del animals[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        },
+        "id": "WwAKQjcUmwGo",
+        "outputId": "03e6a672-f934-4d7f-adb5-bcf3ccd7a43a"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'tuple' object doesn't support item deletion",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-83311d980830>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# try to delete the second item\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0manimals\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object doesn't support item deletion"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# delete a tuple itself\n",
+        "animals = ('dog', 'cat', 'rat')\n",
+        "\n",
+        "# delete the tuple\n",
+        "del animals"
+      ],
+      "metadata": {
+        "id": "WmeiEbUomzsn"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Iterate Through a Tuple\n"
+      ],
+      "metadata": {
+        "id": "S_4oMCuQm72v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = ('apple', 'banana', 'mango')\n",
+        "\n",
+        "for fruit in fruits:\n",
+        "    print(\"I like\", fruit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8jAlxV9om_IO",
+        "outputId": "fece1757-08a9-4ed9-f40a-170c0a612887"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I like apple\n",
+            "I like banana\n",
+            "I like mango\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Membership Check\n"
+      ],
+      "metadata": {
+        "id": "mCYEjzNcnGp_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = ('apple', 'banana', 'mango')\n",
+        "if 'apple' in fruits:\n",
+        "    print(\"apple is tasty\")\n",
+        "\n",
+        "if 'potato' in fruits:\n",
+        "    print(\"Whaaaat?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AocIvzaEnLXa",
+        "outputId": "80957b02-55ba-41f3-abf0-aea790a0f763"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple is tasty\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = ('apple', 'banana', 'mango')\n",
+        "\n",
+        "print('Kiwi' in fruits)   # False\n",
+        "print('Kiwi' not in fruits)   # True"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "boUZEs8JnOkR",
+        "outputId": "7a6fbcf6-7776-42e8-dd15-6ffe7b793571"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**We use the in operator to check membership in tuples.**\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vdDkerwbnV2D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When to Use Tuples?\n",
+        "If we are certain that the items of a collection won't change, it's better to use tuples instead of a list.\n",
+        "\n",
+        "Why?\n",
+        "\n",
+        "Because tuples are immutable, meaning their items cannot be modified. Its built-in safeguard helps prevent unintended changes in our data.\n",
+        "\n",
+        "If we accidentally change items in a tuple, Python will raise an error, alerting us of the mistake."
+      ],
+      "metadata": {
+        "id": "nG9jesN8nejz"
+      }
     }
   ]
 }
