--- a/DataTypes.ipynb
+++ b/DataTypes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9imncBlY/du7KW0YDVfVK"
+      "authorship_tag": "ABX9TyPzFR1S1CP2xMfKgD49D6S+"
     },
     "kernelspec": {
       "name": "python3",
@@ -3771,6 +3771,281 @@
           "name": "stdout",
           "text": [
             "{1, 2, 3, 4}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Conversion**\n",
+        "\n",
+        "We learned about different compound data types in this chapter. Now, let's learn to convert one compound data type to another using these built-in functions.\n",
+        "\n",
+        "list() - converts to list\n",
+        "\n",
+        "tuple() - converts to tuple\n",
+        "\n",
+        "dict() - converts to dictionary\n",
+        "\n",
+        "set() - converts to set\n",
+        "\n",
+        "Let's try each of these functions one by one."
+      ],
+      "metadata": {
+        "id": "PUGojK-GzxRw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The list() Function\n"
+      ],
+      "metadata": {
+        "id": "jZyuHeiX106Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert tuple to list\n",
+        "result = list((1, 2, 3))   # [1, 2, 3]\n",
+        "print(result)\n",
+        "\n",
+        "# convert string to list\n",
+        "result = list(\"Hello\")   # ['H', 'e', 'l', 'l', 'o']\n",
+        "print(result)\n",
+        "\n",
+        "# convert dictionary to list\n",
+        "result = list({2: 4, 10: 20})   # [2, 10]\n",
+        "print(result)\n",
+        "\n",
+        "# convert set to list\n",
+        "result = list({1, 2, 3})   # [1, 2, 3]\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JMHvHTN51_2u",
+        "outputId": "5d4ab823-d420-4d3f-844d-1dfac6cc3370"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3]\n",
+            "['H', 'e', 'l', 'l', 'o']\n",
+            "[2, 10]\n",
+            "[1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note: When a dictionary is converted to a list, the list items will only consist of the dictionary's keys.\n"
+      ],
+      "metadata": {
+        "id": "f2me7ANt2Dj-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The tuple() Function\n",
+        "The tuple() function converts an iterable (list, string, dict, or set) to a tuple."
+      ],
+      "metadata": {
+        "id": "YSQ-dKoQ2HMQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert list to tuple\n",
+        "result = tuple([1, 2, 3])   # (1, 2, 3)\n",
+        "print(result)\n",
+        "\n",
+        "# convert string to tuple\n",
+        "result = tuple(\"Hello\")   # ('H', 'e', 'l', 'l', 'o')\n",
+        "print(result)\n",
+        "\n",
+        "# convert dictionary to tuple\n",
+        "# dictionary's keys will be tuple's items\n",
+        "result = tuple({2: 4, 10: 20})   # (2, 10)\n",
+        "print(result)\n",
+        "\n",
+        "# convert set to tuple\n",
+        "result = tuple({1, 2, 3})   # (1, 2, 3)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k6lai19m2M6r",
+        "outputId": "2cd0b28f-965f-4c20-a4ae-8898e0271b6b"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 2, 3)\n",
+            "('H', 'e', 'l', 'l', 'o')\n",
+            "(2, 10)\n",
+            "(1, 2, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The dict() Function\n",
+        "The dict() function can be used to create a dictionary.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rhbRjx9b2Qqe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert to dictionary\n",
+        "coordinate = dict([('x', 5), ('y', -5)])\n",
+        "print(coordinate)   # {'x': 5, 'y': -5}\n",
+        "\n",
+        "# convert to dictionary\n",
+        "coordinate = dict(x = 5, y = -5)\n",
+        "print(coordinate)   # {'x': 5, 'y': -5}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IGn_r7xv2U_2",
+        "outputId": "5027d917-fe42-415f-c3fb-8f08ba0edbc7"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'x': 5, 'y': -5}\n",
+            "{'x': 5, 'y': -5}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note: The items of a dictionary are key/value pairs. Hence, the argument(s) passed to the dict() function must be in a specific format.\n"
+      ],
+      "metadata": {
+        "id": "MfleaWFN2ZpW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The set() Function\n",
+        "The set() function converts an iterable (list, tuple, string, or dict) to a set"
+      ],
+      "metadata": {
+        "id": "v6U4_QxI2eDy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert list to set\n",
+        "result = set([1, 2, 3])\n",
+        "print(result) # {1, 2, 3}\n",
+        "\n",
+        "# convert string to set\n",
+        "result = set(\"abca\")\n",
+        "print(result) # {'a', 'b', 'c'}\n",
+        "\n",
+        "# convert tuple to set\n",
+        "result = set((1, 2, 3, 2, 3))\n",
+        "print(result) # {1, 2, 3}\n",
+        "\n",
+        "# convert dictionary to set\n",
+        "result = set({2: 4, 10: 20}) # {2, 10}\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lsqCTmgl2k_P",
+        "outputId": "82ff2477-fd3d-462f-e288-2ffc11ea4c90"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3}\n",
+            "{'b', 'c', 'a'}\n",
+            "{1, 2, 3}\n",
+            "{2, 10}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note: A set cannot contain duplicate values. All the duplicate values of an iterable are removed when we convert the iterable to a set.\n"
+      ],
+      "metadata": {
+        "id": "v_dL7Bjq2ovf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Remove Duplicate Items From a List\n",
+        "There is an awesome way to remove duplicate items from a list"
+      ],
+      "metadata": {
+        "id": "vWsmpgRy2uUM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 1, 2, 3, 4, 1, 1]\n",
+        "\n",
+        "numbers = list(set(numbers))\n",
+        "print(numbers)   # [1, 2, 3, 4]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9b1JTpZd2w8p",
+        "outputId": "97d72e6a-d579-44e1-83c4-c2da7eb080f5"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4]\n"
           ]
         }
       ]
