--- a/DataTypes.ipynb
+++ b/DataTypes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzFR1S1CP2xMfKgD49D6S+"
+      "authorship_tag": "ABX9TyOKOfalDJUhbZDmV/R7CwOU"
     },
     "kernelspec": {
       "name": "python3",
@@ -4049,6 +4049,258 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The range() Function\n"
+      ],
+      "metadata": {
+        "id": "Eb-wVn7y3GQh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers from 1 to 5\n",
+        "numbers = range(1, 6)\n",
+        "\n",
+        "# convert numbers to list for printing\n",
+        "numbers = list(numbers)\n",
+        "\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TnLeQJc33MtY",
+        "outputId": "6b92cf8a-74b8-48fc-b38e-38d5b7c39203"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# range() With One Argument\n"
+      ],
+      "metadata": {
+        "id": "v-Vk9Umr3TEv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers from 0 to 4\n",
+        "numbers = range(5)\n",
+        "\n",
+        "# convert numbers to list for printing\n",
+        "numbers = list(numbers)\n",
+        "\n",
+        "print(numbers)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M0rBUH2-3W3i",
+        "outputId": "8ca5901c-d1d2-467c-ca47-206266fd14b7"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 3\n",
+        "\n",
+        "for i in range(n):\n",
+        "    print(\"Hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_4xs6Y_83afp",
+        "outputId": "ca08fa10-c761-4acb-e7d6-be05877bf5bc"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n",
+            "Hello\n",
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for number in range(3):\n",
+        "    print(number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0ZRsWLsp3gof",
+        "outputId": "f55a8fc4-4749-4c95-f8ce-5af554b86283"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The step Argument\n",
+        "numbers = range(start, end, step)\n"
+      ],
+      "metadata": {
+        "id": "3rGKcV393kKg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers from 1 to 10\n",
+        "numbers = range(1, 11, 3)\n",
+        "\n",
+        "# convert numbers to list for printing\n",
+        "numbers = list(numbers)\n",
+        "\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ceSdqtf3qE-",
+        "outputId": "edeccba7-5159-4ef9-c140-7d38b715e75a"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 7, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Problem Description\n",
+        "\n",
+        "Create a sequence of numbers 4, 7, 10 using the range() function.\n",
+        "\n",
+        "Convert this sequence to tuple using the tuple() function.\n",
+        "Print the tuple."
+      ],
+      "metadata": {
+        "id": "Y2f3V_S-4efw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create the sequence of numbers using range()\n",
+        "numbers = range(4, 11, 3)\n",
+        "\n",
+        "# convert numbers to tuple\n",
+        "# assign the tuple to the result variable\n",
+        "result = tuple(numbers)\n",
+        "\n",
+        "# print the result\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lCmUQOOh4iOT",
+        "outputId": "03b3a09e-9b55-4d66-ef7c-f9b0a00cc72f"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 7, 10)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = range(5, 0, -1)\n",
+        "\n",
+        "# convert to list and print it\n",
+        "print(list(numbers))\n",
+        "\n",
+        "# Output\n",
+        "# [5, 4, 3, 2, 1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3tfiNDrW4m-K",
+        "outputId": "7f20110f-f5d6-4045-c80d-7ced923dd6c1"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 4, 3, 2, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "By the way, range is not a data type like lists, strings etc. We have included this topic here because it makes sense.\n"
+      ],
+      "metadata": {
+        "id": "rytrX5vj4pFB"
+      }
     }
   ]
 }
