Recap Data Types

--- a/DataTypes.ipynb
+++ b/DataTypes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKOfalDJUhbZDmV/R7CwOU"
+      "authorship_tag": "ABX9TyMHQFXDcy7sCTZpjkEvWJud"
     },
     "kernelspec": {
       "name": "python3",
@@ -4301,6 +4301,209 @@
       "metadata": {
         "id": "rytrX5vj4pFB"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data Type\tOrdered?\tMutable?\tDuplicates?\n",
+        "List\tYes\tYes\tYes\n",
+        "\n",
+        "Tuple\tYes\tNo\tYes\n",
+        "\n",
+        "String\tYes\tNo\tYes\n",
+        "\n",
+        "Dictionary\tYes\tYes\tNo (keys must be unique)\n",
+        "\n",
+        "Set\tNo\tYes\tNo\n",
+        "\n",
+        "Notes:\n",
+        "\n",
+        "Ordered means the items have a defined order.\n",
+        "\n",
+        "Mutable means we can add, change and remove items.\n",
+        "\n",
+        "Duplicates means items of the iterable can have duplicate values."
+      ],
+      "metadata": {
+        "id": "Nyrz6JbH46fm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the Largest item\n",
+        "numbers = [10, 45, 61, -6]\n",
+        "\n",
+        "# assign the first value to the largest variable\n",
+        "# we will update the largest variable inside the loop\n",
+        "largest = numbers[0]\n",
+        "\n",
+        "# loop iterates from 0 to last item of numbers\n",
+        "for number in numbers:\n",
+        "    if largest < number:\n",
+        "        largest =  number\n",
+        "\n",
+        "print(f\"largest: {largest}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0RA3ksm_5FWF",
+        "outputId": "d0076d16-287f-460f-ad38-de6d3ac0e5c4"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "largest: 61\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using max() function\n",
+        "numbers = [10, 45, 61, -6]\n",
+        "\n",
+        "# get the largest number\n",
+        "largest = max(numbers)\n",
+        "\n",
+        "print(f\"largest: {largest}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "woE_5MVj5Kn9",
+        "outputId": "1dfb84b6-da7b-432c-f219-9602eab79663"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "largest: 61\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Get Substring From a String"
+      ],
+      "metadata": {
+        "id": "y2iuJo475RN1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_string = \"I love Python\"\n",
+        "\n",
+        "# print characters from index 2 to 5\n",
+        "print(my_string[2:6])    # love\n",
+        "\n",
+        "# print characters from index 2 to last character\n",
+        "print(my_string[2:])    # love Python"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w50vHyRG5UB7",
+        "outputId": "9562c44b-e041-4a32-a9d2-c30fe913fecc"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "love\n",
+            "love Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Get the Value if Key Exists"
+      ],
+      "metadata": {
+        "id": "5ts55rrn5XT0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cubes = {'one': 1, 'two': 2, 'three': 3}\n",
+        "\n",
+        "if 'three' in cubes:\n",
+        "    print(cubes['three'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nu-JjDna5Z-j",
+        "outputId": "17c4f6a3-3125-48d2-e56f-88b6dfe16643"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Employee in Both Departments"
+      ],
+      "metadata": {
+        "id": "gmSZhHcL5dam"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frontend_developers = ['Rob', 'Jane', 'Mary', 'Anne']\n",
+        "backend_developers = ['Jane', 'Jack', 'Lily']\n",
+        "\n",
+        "# convert lists to sets and perform set intersection\n",
+        "both_developers = set(frontend_developers) & set(backend_developers)\n",
+        "\n",
+        "# convert to list and print it\n",
+        "print(list(both_developers))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-S18PIn_5h5C",
+        "outputId": "d1df9ce1-3b0b-4535-ec5c-d6c086848d4e"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Jane']\n"
+          ]
+        }
+      ]
     }
   ]
 }
