--- a/CompletingPythonBasics_usingmodules_nestedLoop_Miscellaneous.ipynb
+++ b/CompletingPythonBasics_usingmodules_nestedLoop_Miscellaneous.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfS2EWc/zESb1T7fSpJkEC"
+      "authorship_tag": "ABX9TyNBCEQDp8agCMOopph4T5xV"
     },
     "kernelspec": {
       "name": "python3",
@@ -94,7 +94,7 @@
         "id": "2146SNbqbIiP",
         "outputId": "6ad66c1e-9c71-4248-ad38-fbf71dfe9d71"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
         "id": "T2qywethbZZX",
         "outputId": "a8fe9668-8f1c-45f4-b15a-eeb59c28ef40"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
         "id": "uFn6sf0vbrHV",
         "outputId": "1cbb7669-ecd9-4189-d6c5-ec9ac073d573"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "id": "k93iRPR6byJy",
         "outputId": "f61ba6a0-95e3-4ff8-ef0f-9e03192e0408"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +249,7 @@
         "id": "BPOfW3IscCcb",
         "outputId": "8865d684-faa8-443f-f00f-d97508163ddd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
         "id": "6DKzyRk5cutn",
         "outputId": "cdd6f3c6-7694-41ed-8dac-0535eb0ff98c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,13 +353,213 @@
         "id": "c4RrC0twc4ro",
         "outputId": "b2316348-3bfd-4975-a304-59883178d722"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Nested Loops**\n",
+        "It's possible to put a loop inside another loop. This is known as a nested loop.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZXtOWYPBdf4S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attributes = ['Electric', 'Fast']\n",
+        "cars = ['Tesla', 'Porsche', 'Mercedes']\n",
+        "\n",
+        "for attribute in attributes:\n",
+        "    for car in cars:\n",
+        "        print(attribute, car)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AA0mV2p4drjl",
+        "outputId": "5c67ea4c-a006-402f-e286-4ed4e6b0a439"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Electric Tesla\n",
+            "Electric Porsche\n",
+            "Electric Mercedes\n",
+            "Fast Tesla\n",
+            "Fast Porsche\n",
+            "Fast Mercedes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Slightly modify\n",
+        "attributes = ['Electric', 'Fast']\n",
+        "cars = ['Tesla', 'Porsche', 'Mercedes']\n",
+        "\n",
+        "for attribute in attributes:\n",
+        "\n",
+        "    for car in cars:\n",
+        "        print(attribute, car)\n",
+        "\n",
+        "    print(\"----\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1A-p19U7dxZN",
+        "outputId": "28c5f097-9595-473d-f52a-edd159d980d1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Electric Tesla\n",
+            "Electric Porsche\n",
+            "Electric Mercedes\n",
+            "----\n",
+            "Fast Tesla\n",
+            "Fast Porsche\n",
+            "Fast Mercedes\n",
+            "----\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# outer loop iterates from i = 0 to 2\n",
+        "for i in range(3):\n",
+        "    # inner loop iterates from j = 0 to 1\n",
+        "    for j in range(2):\n",
+        "        print(f\"i = {i}, j = {j}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OSgshQM3d_GZ",
+        "outputId": "c319e174-2595-4510-c344-3ece1b1385fc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i = 0, j = 0\n",
+            "i = 0, j = 1\n",
+            "i = 1, j = 0\n",
+            "i = 1, j = 1\n",
+            "i = 2, j = 0\n",
+            "i = 2, j = 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(2):\n",
+        "    for i in range(1):\n",
+        "        print(\"*\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KynsSG9DeM0w",
+        "outputId": "2b9b8134-da5b-44b2-da9e-2637fe0f4e6b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*\n",
+            "*\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Nested Loops\n",
+        "\n",
+        "Problem Description\n",
+        "\n",
+        "Take integer input from the user and store it in variable n.\n",
+        "Create a nested loop. The outer loop should iterate n times.\n",
+        "In each iteration of the outer loop, iterate the inner loop 2 times.\n",
+        "Inside the inner loop, print \"*\".\n",
+        "\n",
+        "Note: We will assume that the user will always enter a positive integer."
+      ],
+      "metadata": {
+        "id": "26C1DCHlegao"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# get integer input\n",
+        "n = int(input())\n",
+        "\n",
+        "# iterate the outer loop n times\n",
+        "for number in range(n):\n",
+        "    # iterate the inner loop 2 times\n",
+        "    for num in range(2):\n",
+        "        # print \"*\"\n",
+        "        print('*')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vqJL8jo3erIa",
+        "outputId": "b408ad4a-ef16-4a49-bb8d-77bc89ba8705"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "*\n",
+            "*\n",
+            "*\n",
+            "*\n",
+            "*\n",
+            "*\n",
+            "*\n",
+            "*\n",
+            "*\n",
+            "*\n"
           ]
         }
       ]
